style.css
body {
    font-family: 'Open Sans', sans-serif;
}

header {
    display: flex;
    justify-content: center;
}

h1 {
    font-size: 48px;
}

input[type=text] {
    display: inline;
    width: 60px;
    height: 60px;
    font-size: 40px;
    text-align: center;
    border: 2px solid black;
    text-transform: uppercase;
    font-family: 'Open Sans', sans-serif;
    font-weight: 600;
    margin: 0 5px;
}

input[type=text]:focus {
    caret-color: transparent;
}
.compTurn {
    background-color: lightgray;
}

.compWins {
    border-color: darkred;
    font: white;
    background-color: lightcoral;
}

.userWins {
    border-color: darkgreen;
    font: white;
    background-color: lightgreen;

}

#checkers {
    color: gray;
}

#gameSpace {
    display: grid;
    grid-template-rows: 100px 2fr 2fr 1fr;
    grid-template-columns: 1fr 4fr 1fr;
    justify-items: center;
}

#wordsLeft {
    grid-row: 1 / 2;
    grid-column: 2 / 3;
    display: flex;
    justify-content: center;
}

#message {
    grid-row: 1 / 2;
    grid-column: 2 / 3;
    display: flex;
    justify-content: center;
    font-size: 36px;
}

#word {
    grid-row: 2 / 3;
    grid-column: 2 / 3;
    display: flex;
    justify-content: space-evenly;
}

#choice {
    grid-row: 3 / 4;
    grid-column: 2 / 3;
}

#playAgain {
    grid-row: 3 / 4;
    grid-column: 2 / 3;
}

#userPointsDiv {
    grid-row: 2 / 3;
    grid-column: 1 / 2;
    font-size: 36px;
    font-weight: 500;
    text-align: center;
}

#compPointsDiv {
    grid-row: 2 / 3;
    grid-column: 3 / 4;
    font-size: 36px;
    font-weight: 500;
    text-align: center;
}

